# TWIP

./: .gitignore  README.md
TWIP_ros/src/twip_control/: CMakeLists.txt  package.xml
TWIP_ros/src/twip_control/config/: twip_control.yaml
TWIP_ros/src/twip_control/launch/: twip_control.launch
TWIP_ros/src/twip_description/: CMakeLists.txt  package.xml
TWIP_ros/src/twip_description/launch/: twip.rviz  twip_rviz.launch
TWIP_ros/src/twip_description/urdf/: frames.gv  materials.xacro  twip.gazebo  twip.urdf  twip.xacro
TWIP_ros/src/twip_gazebo/: CMakeLists.txt  package.xml
TWIP_ros/src/twip_gazebo/launch/: twip_world.launch
TWIP_ros/src/twip_gazebo/worlds/: twip.world
matlab_simulations/: TWIP.nb  TWIP.slx  TWIP.slx.autosave  TWIP_sFunc.c  TWIP_sFunc.mexw64  trigfun.h
