<?xml version="1.0"?>
<package>
    <name>twip_description</name>
    <version>0.0.0</version>
    <description>The two wheeled inverted pendulum description package</description>

    <maintainer email="dap789@live.com">Damien Prieur</maintainer>

    <license>BSD</license>

    <author email="dap789@live.com">Damien Prieur</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>rviz</run_depend>

    <export>
    </export>
</package>
